--- a/tasks/kde-packages.yml
+++ b/tasks/kde-packages.yml
@@ -7,6 +7,7 @@
     - yakuake
     - korganizer
     - kaddressbook
+    - ksshaskpass
     - kdepim-addons
     - kio-gdrive
     - dolphin-plugins
