--- a/playbook-ubuntu.yml
+++ b/playbook-ubuntu.yml
@@ -35,6 +35,7 @@
     - include: tasks/other-packages.yml
     - include: tasks/version-dependent-packages.yml
     - include: tasks/touchegg.yml
+    - include: tasks/skype.yml
     - include: tasks/amarok.yml
     - block:
       - include: tasks/latex.yml
