Install Kernel Mainline GUI

--- a/test-tasks-playbook.yml
+++ b/test-tasks-playbook.yml
@@ -1,6 +1,4 @@
 ---
 - hosts: all
   tasks:
-    - include: tasks/recoll.yml
-    - include: tasks/touchegg.yml
-    - include: tasks/skype.yml
+    - include: tasks/kernel-mainline.yml
