--- a/playbook-ubuntu.yml
+++ b/playbook-ubuntu.yml
@@ -37,6 +37,7 @@
     - include: tasks/touchegg.yml
     - include: tasks/skype.yml
     - include: tasks/amarok.yml
+    - include: tasks/kernel-mainline.yml
     - block:
       - include: tasks/latex.yml
       tags: latex
