Install mainline also in Kubuntu

--- a/playbook-kubuntu.yml
+++ b/playbook-kubuntu.yml
@@ -39,6 +39,7 @@
     - include: tasks/version-dependent-packages.yml
     - include: tasks/skype.yml
     - include: tasks/amarok.yml
+    - include: tasks/kernel-mainline.yml
     - block:
       - include: tasks/latex.yml
       tags: latex
