--- a/tasks/vscode.yml
+++ b/tasks/vscode.yml
@@ -27,3 +27,7 @@
     update_cache: yes
     name: code
     state: present
+  register: aptout
+
+- debug: msg="{{ aptout.stdout_lines }}"
+  when: aptout.stdout_lines is defined
