--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -1,4 +1,23 @@
-- name: Install Docker
+- name: Remove possible Docker install from docker.com
+  # if installed from https://docs.docker.com/engine/install/ubuntu/
+  become: yes
+  apt:
+    state: absent
+    pkg:
+    - docker-ce
+  register: aptout
+
+- debug: msg="{{ aptout.stdout_lines }}"
+  when: aptout.stdout_lines is defined
+
+- name: Remove possible docker-compose installed from github
+  # if installed from https://github.com/docker/compose/releases/download/
+  become: yes
+  file:
+    path: '/usr/local/bin/docker-compose'
+    state: absent
+
+- name: Install Docker from Ubuntu APT
   become: yes
   apt:
     state: latest
