--- a/tasks/kde-gnome-packages.yml
+++ b/tasks/kde-gnome-packages.yml
@@ -22,3 +22,21 @@
       mime_types:
       - text/plain
       - text/xml
+
+- name: Kate preferences
+  community.general.ini_file:
+    path: ~/.config/katerc
+    section: '{{ item.section }}'
+    option: '{{ item.option }}'
+    value: '{{ item.value }}'
+    no_extra_spaces: yes
+  loop:
+    - section: KTextEditor Document
+      option: ReplaceTabsDyn
+      value: 'false'
+    - section: KTextEditor Document
+      option: Swap Directory
+      value: /tmp/
+    - section: KTextEditor Document
+      option: Swap File Mode
+      value: 2
