--- a/playbook-ubuntu.yml
+++ b/playbook-ubuntu.yml
@@ -9,7 +9,7 @@
       - "{{ ansible_distribution_version }}"
       - "{{ ansible_distribution_major_version }}"
     - name: update repositories
-      become: yes
+      become: true
       apt: update_cache=yes
       changed_when: False
   tasks:
@@ -44,7 +44,7 @@
       tags: latex
   post_tasks:
     - name: Dist-upgrade
-      become: yes
+      become: true
       apt:
         upgrade: dist
       register: aptout
@@ -53,12 +53,12 @@
       when: aptout.stdout_lines is defined
 
     - name: Remove useless packages from the cache
-      become: yes
+      become: true
       apt:
         autoclean: yes
 
     - name: Remove dependencies that are no longer required
-      become: yes
+      become: true
       apt:
         autoremove: yes
       register: aptout
