--- a/tasks/java-packages.yml
+++ b/tasks/java-packages.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install Java Packages
-  become: yes
+  become: true
   apt:
     state: latest
     pkg:
@@ -28,7 +28,7 @@
     - 17
 
 - name: Install libwebkit2gtk (for Eclipse SWT Browser)
-  become: yes
+  become: true
   apt:
     state: latest
     name: libwebkit2gtk-4.0-37
