--- a/tasks/kubuntu-backports.yml
+++ b/tasks/kubuntu-backports.yml
@@ -1,6 +1,6 @@
 ---
 - name: Add Kubuntu Backports apt repository
-  become: yes
+  become: true
   apt_repository:
     repo: ppa:kubuntu-ppa/backports
     state: present
