create man directory

--- a/tasks/java-packages.yml
+++ b/tasks/java-packages.yml
@@ -1,4 +1,12 @@
 ---
+# see https://github.com/geerlingguy/ansible-role-java/issues/64
+# see https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=863199#23
+- name: Make sure man directories are there
+  become: true
+  file:
+    path: '/usr/share/man/man1'
+    state: directory
+
 - name: Install Java Packages
   become: true
   apt:
