--- a/molecule/kubuntu/molecule.yml
+++ b/molecule/kubuntu/molecule.yml
@@ -8,7 +8,7 @@ lint: |
   yamllint .
   ansible-lint
 platforms:
-  - name: custom-docker
+  - name: kubuntu-instance
     image: custom-ubuntu-ansible
     dockerfile: ../common/Dockerfile
     command: ""
