state: latest -> state: present

--- a/tasks/amarok.yml
+++ b/tasks/amarok.yml
@@ -18,7 +18,7 @@
   become: true
   apt:
     update_cache: yes
-    state: latest
+    state: present
     pkg:
     - amarok
     - breeze-icon-theme
