--- a/tasks/kde-packages.yml
+++ b/tasks/kde-packages.yml
@@ -2,7 +2,7 @@
 - name: Install Kde Packages
   become: true
   apt:
-    state: latest
+    state: present
     pkg:
     - latte-dock
     - yakuake
