--- a/tasks/ubuntu-restricted-extras.yml
+++ b/tasks/ubuntu-restricted-extras.yml
@@ -2,7 +2,7 @@
 - name: Install Ubuntu restricted extras
   become: true
   apt:
-    state: latest
+    state: present
     pkg:
     - ubuntu-restricted-extras
   register: aptout
