--- a/playbook-kubuntu.yml
+++ b/playbook-kubuntu.yml
@@ -11,7 +11,7 @@
     - name: update repositories
       become: true
       apt: update_cache=yes
-      changed_when: False
+      changed_when: false
   tasks:
     - block:
       - include: tasks/git.yml
