--- a/tasks/skype.yml
+++ b/tasks/skype.yml
@@ -25,7 +25,7 @@
   become: true
   apt:
     update_cache: yes
-    state: latest
+    state: present
     pkg:
     - skypeforlinux
   register: aptout
