--- a/tasks/zsh-antigen.yml
+++ b/tasks/zsh-antigen.yml
@@ -2,7 +2,7 @@
 - name: Install Antigen requirements
   become: true
   apt:
-    state: latest
+    state: present
     pkg:
     - fonts-powerline
     - curl
