--- a/tasks/kernel-mainline.yml
+++ b/tasks/kernel-mainline.yml
@@ -6,6 +6,7 @@
   copy:
     src: "{{ playbook_dir }}/tasks/files/keys/kernel-mainline.pub"
     dest: "/tmp/"
+    mode: 0600
 
 - name: Add Mainline key
   become: true
