--- a/tasks/gnome-extensions.yml
+++ b/tasks/gnome-extensions.yml
@@ -14,6 +14,12 @@
       - id: 307 # dash-to-dock "dash-to-dock@micxgx.gmail.com"
       - id: 973 # switcher "switcher@landau.fi"
       - id: 4033 # x11-gestures "x11gestures@joseexposito.github.io" requires touchegg
+      - id: 779 # clipboard-indicator
+      - id: 1112 # screenshot-tool
+      - id: 3088 # extension-list
+      - id: 7 # removable-drive-menu
+      - id: 120 # system-monitor
+      - id: 3843 # just-perfection
 
 # - name: Show GNOME Shell extensions
 #   debug: msg="{{ gnome_extensions_full | map(attribute='name') | list | join(",") }}"
