--- a/playbook-kubuntu.yml
+++ b/playbook-kubuntu.yml
@@ -38,6 +38,8 @@
     - include: tasks/kubuntu-restricted-extras.yml
     - include: tasks/other-packages.yml
     - include: tasks/version-dependent-packages.yml
+    - include: tasks/touchegg.yml
+    - include: tasks/touchegg-kde-conf.yml
     - include: tasks/skype.yml
     - include: tasks/amarok.yml
     - include: tasks/kernel-mainline.yml
