make sure tracker is installed

--- a/tasks/gnome-tracker.yml
+++ b/tasks/gnome-tracker.yml
@@ -10,6 +10,13 @@
     key: "/org/freedesktop/tracker/miner/files/ignored-directories"
     value: "['po', 'CVS', 'core-dumps', 'lost+found', 'bin', 'test-bin', 'bin-test', 'target', 'xtend-gen', 'src-gen', 'cache', 'node_modules', 'node_packages', 'thunderbird']"
 
+- name: Make sure Tracker is installed
+  become: true
+  package:
+    state: present
+    name:
+    - tracker
+
 - name: Disable Tracker Extract for user
   ansible.builtin.systemd:
     name: tracker-extract-3
