Show XDG_RUNTIME_DIR

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set XDG_RUNTIME_DIR
       run: echo "XDG_RUNTIME_DIR=/run/user/$UID" >> $GITHUB_ENV
+    - name: Show XDG_RUNTIME_DIR
+      run: |
+        ls -l $XDG_RUNTIME_DIR
+        ls -l /run/user/$UID
     - name: Cache Ansible dependencies
       uses: actions/cache@v2
       with:
