loginctl enable-linger $UID

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: loginctl enable-linger
+      run: |
+        loginctl enable-linger $UID
     - name: Set XDG_RUNTIME_DIR
       run: echo "XDG_RUNTIME_DIR=/home/runner/work/xdg" >> $GITHUB_ENV
     - name: Show XDG_RUNTIME_DIR
