--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
     - name: loginctl enable-linger
       run: |
         loginctl enable-linger $UID
+        export XDG_RUNTIME_DIR=/run/user/$(id -u)
         systemctl --user
     - name: Set XDG_RUNTIME_DIR
       run: echo "XDG_RUNTIME_DIR=/home/runner/work/xdg" >> $GITHUB_ENV
