--- a/.github/old/ci.yml
+++ b/.github/old/ci.yml
@@ -1,3 +1,8 @@
+# This was an old experiment:
+# it runs the playbook directly in the machine of GitHub Actions
+# but it has several limitations (see the excluded tags)
+# and systemd for user does not work
+# Better to use only Molecule
 name: Run Ansible Playbook
 
 on:
