--- a/molecule/common/Dockerfile
+++ b/molecule/common/Dockerfile
@@ -1,40 +1,23 @@
 FROM ubuntu:20.04
 LABEL maintainer="Lorenzo Bettini"
 
-ARG DEBIAN_FRONTEND=noninteractive
+ENV container docker
+ENV LC_ALL C
+ENV DEBIAN_FRONTEND noninteractive
 
-ENV pip_packages "ansible"
-
-# Install dependencies.
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-       apt-utils \
-       build-essential \
-       locales \
-       libffi-dev \
-       libssl-dev \
-       libyaml-dev \
-       python3-dev \
-       python3-setuptools \
-       python3-pip \
-       python3-yaml \
-       software-properties-common \
-       sudo iproute2 \
+    && apt-get install -y python3 sudo bash ca-certificates iproute2 python3-apt aptitude systemd systemd-sysv \
     && apt-get clean \
-    && rm -Rf /var/lib/apt/lists/* \
-    && rm -Rf /usr/share/doc && rm -Rf /usr/share/man
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-# Fix potential UTF-8 errors with ansible-test.
-RUN locale-gen en_US.UTF-8
+RUN rm -f /lib/systemd/system/multi-user.target.wants/* \
+    /etc/systemd/system/*.wants/* \
+    /lib/systemd/system/local-fs.target.wants/* \
+    /lib/systemd/system/sockets.target.wants/*udev* \
+    /lib/systemd/system/sockets.target.wants/*initctl* \
+    /lib/systemd/system/sysinit.target.wants/systemd-tmpfiles-setup* \
+    /lib/systemd/system/systemd-update-utmp*
 
-# Install Ansible via Pip.
-RUN pip3 install $pip_packages
+RUN systemctl set-default multi-user.target
 
-# Install Ansible inventory file.
-RUN mkdir -p /etc/ansible
-RUN echo "[local]\nlocalhost ansible_connection=local" > /etc/ansible/hosts
-
-ADD https://raw.githubusercontent.com/gdraheim/docker-systemctl-replacement/master/files/docker/systemctl3.py /usr/bin/systemctl
-RUN chmod +x /usr/bin/systemctl
-
-CMD ["/usr/bin/systemctl"]
+CMD [ "/lib/systemd/systemd", "log-level=info", "unit=sysinit.target" ]
