--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -12,8 +12,8 @@ lint: |
   ansible-lint
 platforms:
   - name: ubuntu-instance
-    image: custom-${MOLECULE_DOCKER_DISTRO:-ubuntu-20.04}-ansible
-    dockerfile: ../docker/${MOLECULE_DOCKER_DISTRO:-ubuntu-20.04}/Dockerfile
+    image: custom-${MOLECULE_DOCKER_DISTRO:-ubuntu-default}-ansible
+    dockerfile: ../docker/${MOLECULE_DOCKER_DISTRO:-ubuntu-default}/Dockerfile
     command: ""
     privileged: true
     build_image: true
