fail-fast: false

--- a/.github/workflows/molecule-ci.yml
+++ b/.github/workflows/molecule-ci.yml
@@ -14,6 +14,7 @@ jobs:
     name: Molecule
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         playbookdistro:
           - ubuntu
