--- a/.github/workflows/molecule-pr.yml
+++ b/.github/workflows/molecule-pr.yml
@@ -13,6 +13,7 @@ jobs:
     name: Molecule
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         playbookdistro:
           - ubuntu
