--- a/playbook-ubuntu.yml
+++ b/playbook-ubuntu.yml
@@ -36,6 +36,7 @@
     - include: tasks/other-packages.yml
     - include: tasks/version-dependent-packages.yml
     - include: tasks/touchegg.yml
+      when: ansible_distribution_version is version('20.04', '>=')
     - include: tasks/skype.yml
     - include: tasks/amarok.yml
     - include: tasks/kernel-mainline.yml
