--- a/tasks/dropbox.yml
+++ b/tasks/dropbox.yml
@@ -17,12 +17,23 @@
     file: "/tmp/dropbox.gpg"
     state: present
 
-- name: Add Dropbox apt repository
+- name: Add Dropbox apt repository with Distribution codename
+  become: true
+  apt_repository:
+    repo: "deb [arch=i386,amd64] http://linux.dropbox.com/ubuntu {{ ansible_distribution_release }} main"
+    state: present
+    filename: dropbox
+  when: ansible_distribution_version is version('19.04', '<=')
+# Up to disco they were providing specific different directories
+
+- name: Add Dropbox apt repository with disco codename
   become: true
   apt_repository:
     repo: deb [arch=i386,amd64] http://linux.dropbox.com/ubuntu disco main
     state: present
     filename: dropbox
+  when: ansible_distribution_version is version('19.04', '>')
+# Since eoan they stopped
 
 - name: Install Dropbox
   become: true
@@ -30,7 +41,3 @@
     name: dropbox
     update_cache: yes
     state: present
-  register: aptout
-
-- debug: msg="{{ aptout.stdout_lines }}"
-  when: aptout.stdout_lines is defined
