--- a/playbook-ubuntu.yml
+++ b/playbook-ubuntu.yml
@@ -40,8 +40,9 @@
       when: ansible_distribution_version is version('20.04', '>=') and ansible_distribution_version is version('22.04', '<')
       # In 22.04 I use Wayland where touchpad gestures work automatically
     - include: tasks/skype.yml
-#    - include: tasks/amarok.yml
-#    - include: tasks/kernel-mainline.yml
+    - include: tasks/amarok.yml # Amarok not yet available in Jammy
+      when: ansible_distribution_version is version('22.04', '<')
+    - include: tasks/kernel-mainline.yml
     - block:
       - include: tasks/latex.yml
       tags: latex
